# ai-engineer-training

./: .gitignore  check_graph.py
week03/: assign.py
week03-homework/: pyproject.toml
week03-homework-2/: README.md  env.example  pyproject.toml
week03-homework-2/data/: company_info.txt  faq.txt
week03-homework-2/graph_rag/: check_graph.py  main.py  report.md
week03-homework-2/graph_rag/data/: company_info.txt
week03-homework-2/milvus_faq/: README.md  main.py  report.md
week03-homework/chunking_research/: main.py  report.md
week03-homework/data/: ai.txt  dl.txt  ml.txt
week03-homework/ocr_research/: generate_images.py  main.py  report.md
week03/code/: P32-ragas.py  P33-ragas检索召回.py  graphrag_demo.py
week04/: p5-构建第一个对话链.ipynb
week04-homework/smart_customer_service/: main.py
